	  unless there are sure signs that the background is white.
	  This makes the default choice more consistent with <=eix-0.27.4.
	- Revert BG1=black, BG3=white since it is the only way to guarantee
	  readability if the heuristic fails.
	- Users of transparent terms should therefore set BG1=none BG3=none
	  in /etc/eixrc, see the BUGS section of the eix manpage.
	- Change TERM_DARK meaning to allow a finer heuristics
	  (e.g. tune whether COLORFGBG is respected).
	- Clear comment lines correctly in non-mask files, see
	  http://bugs.gentoo.org/show_bug.cgi?id=446078 and
	  http://developer.berlios.de/bugs/?func=detailbug&
	  bug_id=18819&group_id=11597
	- Recognize file-ends better for comment separation

*eix-0.27.5
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Support mask reason (by default output with --versionlines), see
	  http://developer.berlios.de/feature/?func=detailfeature&
	  feature_id=5605&group_id=11597
	- If you have inconvenient colors (e.g. on dark or transparent terms),
	  this is probably due to the new DARK heuristics (see below).
	  Put DARK=true (or false) into /etc/eixrc to avoid it.
	  See the BUGS section on the eix manpage.
	- To improve readability by forcing the background colors, set
	  BG0=black, BG1=black, BG2=white, BG3=white in /etc/eixrc:
	  The defaults are all reverted to "none" due to DARK heuristics
	  and to eliminate problems with broken terminals (see below).
	  See the BUGS section on the eix manpage.
	- Renamed variables to allow more cases of terminals:
	  TERM_ALT{1..3} corresponding to COLORSCHEME{0..3}
	  Previous TERM_ALT and COLORSCHEME{,_ALT} variables are obsolete.
	- Example: To select 8/16 colors on all terminals and dark background
	  (e.g. for solarized) set TERM_ALT3="." and e.g. DARK=true or
	  COLORSCHEME3=0.
	  See the BUGS section on the eix manpage.
	- Let DARK=auto use a heuristic based on TERM_DARK, COLORFGBG_DARK,
	  see http://bugs.gentoo.org/show_bug.cgi?id=438076